# homey

./: .gitignore  CMakeLists.txt  README.md  devenv.sh
.devcontainer/: Dockerfile  devcontainer.json
src/: MLPipeline.cpp  Types.h  main.cpp
